--- a/Homeworks/power/power.vcxproj
+++ b/Homeworks/power/power.vcxproj
@@ -74,6 +74,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="power.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="power.cpp" />
+    <ClCompile Include="text.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
